style.css
:root {
    --background-color: #030422;
    --border-color: 1px solid rgba(167, 167, 167, 0.1);
}

* {
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    background-color: var(--background-color);
    font-family: "SN pro", sans-serif;
    font-weight: 700;
    font-style: normal;
    font-size: 15px;
    height: 100vh;
}

.navbar {
    display: flex;
    width: 100%;
}

a {
    text-decoration: none;
    color: white;
}

a:visited {
    color: white;
}

.nav-section {
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: var(--border-color);
    border-bottom: var(--border-color);
    padding: 40px;
    overflow: visible;
}

.logo-section {
    justify-content: start;
    flex-basis: calc(100% / 3);
}

.logo-section > a {
    height: 50px;
}

.about-blog-section {
    flex-basis: calc(100% / 3);
    gap: clamp(20px, 4vw, 100px);
}

.about-blog-section > a {
    flex-wrap: nowrap;
    flex-shrink: 0;
}

.about-blog-section > a span{
    position: relative;
}

.social-media-section {
    flex: 1;
    gap: clamp(30px, 4vw, 50px);
}

.contact-section {
    flex: 1;
    border-right: none;
}

.contact-section > a span{
    position: relative;
}


/*======Nav Images======*/

.logo-img {
    height: 50px;
    width: 50px;
    filter: brightness(0) invert(1);
    transition: transform 0.3s ease-in-out;
}

@keyframes stretch-bounce {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2, 0.9); /* Stretches wider, flattens slightly */
    }
    100% {
        transform: scale(1);
    }
}

.logo-section:hover .logo-img {
    animation: stretch-bounce 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
}

.social-media-icon {
    height: 20px;
    width: 20px;
    transition: transform 0.3s ease;
}

.facebook {
    filter: brightness(0) invert(1);
}

.matica-logo {
    display: block;
    height: 30px;
    width: 30px;
    fill: white;
    margin: 0;
    fill: white;
    transition: transform 0.3s ease;
}

.social-media-icon:hover {
    transform: scale(1.3);
}

.logo-ellipse {
    fill: white !important;
    transition: fill 0.3s ease;
}

.matica-logo:hover .logo-ellipse {
    fill: red !important;
}

.logo-cross {
    fill: white;
    stroke: black;
    stroke-width: 5px;
    transition: fill 0.3s ease, stroke 0.3s ease;
}

.matica-logo:hover .logo-cross {
    fill: white !important;
    stroke: white;
}

/*======Nav Images======*/

/*======Nav TEXT======*/
.about-blog-section > a span::after {
    content: '';
    position: absolute;
    height: 1px;
    width: 0%;
    background-color: white;
    left: 50%;
    bottom: -2px;
    transform: translateX(-50%);
    transition: width 0.3s ease;
}

.about-blog-section > a:hover span::after {
    width: 100%;
}

.about-blog-section a:hover {
    color: rgba(255, 255, 255, 0.7);
}

.contact-section > a span::after {
    content: '';
    position: absolute;
    height: 1px;
    width: 0%;
    background-color: white;
    left: 50%;
    bottom: -2px;
    transform: translateX(-50%);
    transition: width 0.3s ease;
}

.contact-section > a:hover span::after {
    width: 100%;
}

.contact-section > a:hover {
    color: rgba(255, 255, 255, 0.7);
}
/*======Nav TEXT======*/

/*======MAIN GRID======*/
.main-grid {
    flex: 1;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: minmax(0, 2fr) minmax(0, 1fr);
    overflow: hidden;
}

.main-part {
    border-right: var(--border-color);
    padding: 20px;
}

.main-img {
    border-bottom: var(--border-color);
    padding: 0;
}

.library {
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: contrast(110%);
}

.main-text {
    display: flex;
    border-bottom: var(--border-color);
    text-align: start;
    align-items: end;
    color: white;
    font-size: clamp(20px, 4vw, 40px);
}

.main-title {
    display: flex;
    align-items: center;
    padding: 20px 3rem;

}

.title {
    flex: 1;
    color: white;
    font-size: 60px;
}
.fa-plus {
    color: white;
    font-size: 100px;
    transition: transform 0.5s ease-out;
}

.main-title:hover > .fa-plus {
    transform: rotate(180deg);
}

.arrows {
    display: flex;
    padding: 0;
}

.left-arrow, .right-arrow {
    display: flex;
    width: 100%;
    height: 100%;
    font-size: 80px;
    flex: 1;
    justify-content: center;
    align-items: center;
    background: none;
    border: none;
    margin: 0;
    padding: 0;
    cursor: pointer;
}

.left-arrow {
    border-right: var(--border-color);
}

.fa-arrow-left, .fa-arrow-right {
    font-size: 60px;
    display: inline-block;
}

.fa-arrow-left {
    transition: transform 0.3s ease;
}

.left-arrow:hover > .fa-arrow-left {
    transform: translateX(-10px);
}

.left-arrow:hover {
    background-color: #0c0d30;
}

.fa-arrow-right {
    transition: transform 0.3s ease;
}

.right-arrow:hover > .fa-arrow-right {
    transform: translateX(10px);
}

.right-arrow:hover {
    background-color: #0c0d30;
}


/*======MAIN GRID======*/


/*========PHONE LAYOUT========*/

@media (max-width: 750px) {
    .navbar {
        flex-direction: column;
    }

    .nav-section {
        border-right: none;
    }

    .logo-section {
        justify-content: center;
    }

    .about-blog-section {
        justify-content: center;
        text-align: center;
        gap: 0;
    }

    .about-blog-section > a {
        flex-basis: calc(100% / 2);
    }

    .social-media-section {
        justify-content: center;
        text-align: center;
        gap: 0;

    }

    .social-media-section > a {
        flex-basis: calc(100% / 2);
    }

    .main-grid {
        display: flex;
        flex-direction: column;
        overflow: visible;
    }

    .main-img {
        order: 1;
        border-right: none;
    }

    .main-title {
        order: 2;
        border-right: none;
        gap: 5px;
        font-size: 16px;
    }

    .main-text {
        border-top: var(--border-color);
        order: 3;
        border-right: none;
    }

    .arrows {
        order: 4;
        height: 100px;
        border-right: none;
    }
}

/*========PHONE LAYOUT========*/

